[gd_scene load_steps=19 format=3 uid="uid://dxsgampwjnoas"]

[ext_resource type="Script" path="res://inimigos/enemy_frog.gd" id="1_smbav"]
[ext_resource type="Texture2D" uid="uid://bpmedgiie2p23" path="res://Sprites/Enemies/Oposum/hit.png" id="2_y5yto"]
[ext_resource type="Texture2D" uid="uid://b3qsnu86qjb8v" path="res://Sprites/Enemies/Oposum/oposum.png" id="3_txolw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lno66"]
atlas = ExtResource("2_y5yto")
region = Rect2(0, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_jofl5"]
atlas = ExtResource("2_y5yto")
region = Rect2(36, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_b38mg"]
atlas = ExtResource("2_y5yto")
region = Rect2(72, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_emt3e"]
atlas = ExtResource("2_y5yto")
region = Rect2(108, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hxi5"]
atlas = ExtResource("2_y5yto")
region = Rect2(144, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_mguha"]
atlas = ExtResource("2_y5yto")
region = Rect2(180, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2da6"]
atlas = ExtResource("3_txolw")
region = Rect2(0, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiq5r"]
atlas = ExtResource("3_txolw")
region = Rect2(36, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_57wbg"]
atlas = ExtResource("3_txolw")
region = Rect2(72, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h8j6"]
atlas = ExtResource("3_txolw")
region = Rect2(108, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g21p"]
atlas = ExtResource("3_txolw")
region = Rect2(144, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_8raeh"]
atlas = ExtResource("3_txolw")
region = Rect2(180, 0, 36, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_w138r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lno66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jofl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b38mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emt3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hxi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mguha")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2da6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fiq5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57wbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h8j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g21p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8raeh")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63ut8"]
size = Vector2(25, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvloy"]
size = Vector2(24, 18)

[node name="frog" type="CharacterBody2D" groups=["enemy", "player"]]
position = Vector2(0, -16)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_smbav")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 3)
sprite_frames = SubResource("SpriteFrames_w138r")
animation = &"hit"
autoplay = "jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, 6)
shape = SubResource("RectangleShape2D_63ut8")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-19, 0)
collision_mask = 2
collide_with_areas = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, 6)
shape = SubResource("RectangleShape2D_jvloy")

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
